# DynDeltaOrientation

./: CMakeLists.txt  LICENSE  README.md  compile_withcmake.sh
app/: delta-orientations.cpp  metis_to_sequence.cpp  parse_parameters.h
cmake/: FindGurobi.cmake
img/: generate-social-preview.py
lib/: DeltaOrientationsConfig.h  DeltaOrientationsResult.h  definitions.h
lib/algorithms/: DynEdgeOrientation.h  DynamicAlgorithmMeta.h  dyn_edge_orientation_BFSCS.cpp  dyn_edge_orientation_BFSCS.h  dyn_edge_orientation_BFSMax.cpp  dyn_edge_orientation_BFSMax.h  dyn_edge_orientation_BrodalFagerberg.cpp  dyn_edge_orientation_BrodalFagerberg.h  dyn_edge_orientation_BrodalFagerbergCS.cpp  dyn_edge_orientation_BrodalFagerbergCS.h  dyn_edge_orientation_CCHHQRS.cpp  dyn_edge_orientation_CCHHQRS.h  dyn_edge_orientation_DFS.cpp  dyn_edge_orientation_DFS.h  dyn_edge_orientation_Hashing.cpp  dyn_edge_orientation_Hashing.h  dyn_edge_orientation_HashingGoogle.cpp  dyn_edge_orientation_HashingGoogle.h  dyn_edge_orientation_ILP.cpp  dyn_edge_orientation_ILP.h  dyn_edge_orientation_KFlips.cpp  dyn_edge_orientation_KFlips.h  dyn_edge_orientation_KFlipsCS.cpp  dyn_edge_orientation_KFlipsCS.h  dyn_edge_orientation_MaxDecending.cpp  dyn_edge_orientation_MaxDecending.h  dyn_edge_orientation_Naive.cpp  dyn_edge_orientation_Naive.h  dyn_edge_orientation_Path.cpp  dyn_edge_orientation_Path.h  dyn_edge_orientation_RWalk.cpp  dyn_edge_orientation_RWalk.h  dyn_edge_orientation_RWalkCS.cpp  dyn_edge_orientation_RWalkCS.h  dyn_edge_orientation_RWalkMax.cpp  dyn_edge_orientation_RWalkMax.h  dyn_edge_orientation_impro_opt.cpp  dyn_edge_orientation_impro_opt.h  dyn_edge_orientation_improved_opt.cpp  dyn_edge_orientation_improved_opt.h  (+10 more)
lib/data_structure/: buckets.cpp  buckets.h  dyn_graph_access.cpp  dyn_graph_access.h  graph_access.h
lib/data_structure/priority_queues/: BucketPriorityQueue.cpp  BucketPriorityQueue.h  bucket_pq.h  maxNodeHeap.h  priority_queue_interface.h
lib/io/: graph_io.cpp  graph_io.h
lib/tools/: algorithm_factory.h  more_hasher.h  random_functions.h  timer.h
